syntax = "proto3";
option optimize_for = SPEED; // 加快解析
option java_outer_classname = "CommonProto"; // 外部类名称


message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginRes{
  int64 uid = 1;
  repeated Role role = 2;
}

message Role{
  int64 uid = 1;
  int64 rid = 2;
  string roleName = 3;
  int32 level = 4;
  string career = 5;
}

message EnterRoleReq{
  int64 uid = 1;
  int64 rid = 2;
}

message EnterRoleRes{
  int64 uid = 1;
  Role role = 2;
  int64 serverTime = 3;
  Position position = 4;
}

message Position{
  string mapName = 1;
  int32 mapLine = 2;
  XY xy = 3;
}

// 坐标
message XY {
  int32 x = 1;
  int32 y = 2;
}

message Heart{
  int64 time = 1;
}

message MockMsgOne{
  string desc = 1;
  int32 desc2 = 2;
}